cluster/apps/simplebookmarks-staging/route.yaml
---
## Route going to oauth2-proxy service
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: staging-api
  namespace: simplebookmarks-staging
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`staging-api.${SECRET_SIMPLEBOOKMARKS_DOMAIN}`)
      priority: 10
      services:
        - name: oauth2-proxy
          port: 80
  tls:
    secretName: tls-staging-api
